--- a/backend/package.json
+++ b/backend/package.json
@@ -30,54 +30,60 @@
   "author": "FLAME Assistant Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "compression": "^1.7.4",
-    "dotenv": "^16.3.1",
+    "@hapi/boom": "^10.0.1",
+    "@whiskeysockets/baileys": "^7.0.0-rc.3",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "pg": "^8.11.3",
-    "redis": "^4.6.10",
-    "socket.io": "^4.7.4",
-    "openai": "^4.20.1",
-    "axios": "^1.6.2",
-    "multer": "^1.4.5-lts.1",
-    "winston": "^3.11.0",
+    "helmet": "^7.1.0",
     "joi": "^17.11.0",
-    "uuid": "^9.0.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "openai": "^4.20.1",
+    "pg": "^8.11.3",
+    "qrcode": "^1.5.3",
+    "redis": "^4.6.10",
+    "sharp": "^0.32.6",
+    "socket.io": "^4.7.4",
+    "uuid": "^9.0.1",
+    "whatsapp-web.js": "^1.23.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
-    "@types/compression": "^1.7.5",
     "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/pg": "^8.10.9",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
-    "@types/uuid": "^9.0.7",
     "@types/node": "^20.10.4",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
-    "@types/jest": "^29.5.8",
+    "@types/pg": "^8.10.9",
+    "@types/qrcode": "^1.5.5",
     "@types/supertest": "^2.0.16",
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.1",
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3",
-    "eslint": "^8.55.0",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "prettier": "^3.1.0"
+    "eslint": "^8.55.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
