--- a/backend/package.json
+++ b/backend/package.json
@@ -50,7 +50,9 @@
     "nodemailer": "^6.9.7",
     "openai": "^4.20.1",
     "pg": "^8.11.3",
-    "qrcode": "^1.5.3",
+    "pino": "^9.11.0",
+    "pino-pretty": "^13.1.1",
+    "qrcode": "^1.5.4",
     "redis": "^4.6.10",
     "sharp": "^0.32.6",
     "socket.io": "^4.7.4",
