--- a/@new_version/backend/package.json
+++ b/@new_version/backend/package.json
@@ -11,41 +11,42 @@
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.5",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "compression": "^1.7.4",
-    "dotenv": "^16.3.1",
-    "socket.io": "^4.7.5",
-    "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
-    "pg": "^8.11.3",
-    "redis": "^4.6.12",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
-    "qrcode": "^1.5.3",
+    "pg": "^8.11.3",
     "pino": "^8.16.2",
     "pino-pretty": "^10.3.1",
+    "qrcode": "^1.5.3",
+    "redis": "^4.6.12",
+    "sharp": "^0.34.4",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1",
-    "multer": "^1.4.5-lts.1",
-    "express-validator": "^7.0.1",
-    "express-rate-limit": "^7.1.5",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
-    "@types/compression": "^1.7.5",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.13",
+    "@types/node": "^20.10.4",
     "@types/node-cron": "^3.0.11",
+    "@types/pg": "^8.10.9",
     "@types/qrcode": "^1.5.5",
     "@types/uuid": "^9.0.7",
-    "@types/multer": "^1.4.11",
-    "@types/pg": "^8.10.9",
-    "typescript": "^5.3.3",
-    "tsx": "^4.6.2"
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.3"
   }
 }
