--- a/@new_version/backend/package.json
+++ b/@new_version/backend/package.json
@@ -7,10 +7,12 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "migrate": "node scripts/migrate-database.js"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.5",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
