--- a/@new_version/backend/package.json
+++ b/@new_version/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
+    "build": "tsc --project tsconfig.build.json",
     "start": "node dist/server.js",
     "clean": "rm -rf dist",
     "migrate": "node scripts/migrate-database.js"
